# fedup

./: Cargo.toml  README.md
src/: folder_scanner.rs  main.rs
src/folder_scanner/: collector.rs  deduplicator.rs  duplicates_group.rs  duplicates_result_processor.rs  file_info.rs  scanner.rs
