[package]
name = "fedup"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atomic-counter = "1.0.1"
clap = { version = "4.1.4", features = ["derive"] }
crossbeam-channel = "0.5.6"
env_logger = "0.10.0"
log = "0.4.17"
